--- a/app/src/main/res/drawable/empty_photo.xml
+++ b/app/src/main/res/drawable/empty_photo.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item android:drawable="@drawable/autumn1"></item>
+    <item android:drawable="@drawable/autumn2"></item>
+    <item android:drawable="@drawable/autumn3"></item>
+    <item android:drawable="@drawable/autumn4"></item>
+    <item android:drawable="@drawable/autumn5"></item>
 </selector>
