add the intent examples

--- a/app/src/main/res/layout/activity_intent_test.xml
+++ b/app/src/main/res/layout/activity_intent_test.xml
@@ -12,9 +12,27 @@
         android:layout_height="wrap_content"
         android:text="Launch other activity"
         android:id="@+id/launchButton"
+        android:onClick="launch"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false"
-        android:layout_marginTop="56dp"
-        android:onClick="launch" />
+        android:layout_alignParentStart="true" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Call the china mobile"
+        android:id="@+id/callPhoneButton"
+        android:onClick="callPhone"
+        android:layout_below="@+id/launchButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Call the china mobile"
+        android:id="@+id/sendMSG"
+        android:onClick="sendTo"
+        android:layout_below="@+id/callPhoneButton"
+        android:layout_alignLeft="@+id/callPhoneButton"
+        android:layout_alignStart="@+id/callPhoneButton" />
 </RelativeLayout>
